--- a/src/components/PrimitiveMenu/styles.css
+++ b/src/components/PrimitiveMenu/styles.css
@@ -6,7 +6,7 @@
 
 .rainbow-primitive-menu_dropdown {
   position: absolute;
-  z-index: 7000;
+  z-index: 1000;
   left: 50%;
   float: left;
   min-width: 6rem;
